name:                flock
version:             0.1.0.0
synopsis:            Simulating animal flocking behaviors
description:         Please see README.md
homepage:            https://github.com/sdemos/flock#readme
license:             MIT
license-file:        LICENSE
author:              Stephen Demos
maintainer:          stphndemos@gmail.com
copyright:           2016 Stephen Demos
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable flock
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sdemos/flock
